# pegasus-v2f

./: .gitignore  README.md  pyproject.toml
api/: README.md  pyproject.toml
api/src/pegasus_v2f_api/: __init__.py  app.py  db_helpers.py  routes.py  static.py
api/src/pegasus_v2f_api/routes/: db.py  exports.py  genes.py  sources.py  studies.py
cli/: README.md  pyproject.toml
cli/src/pegasus_v2f/: __init__.py  ai_assist.py  annotate.py  cli.py  config.py  cytoband.py  db.py  db_meta.py  db_schema.py  evidence.py  evidence_config.py  evidence_loader.py  inspect.py  integrate.py  loaders.py  pegasus_export.py  pegasus_schema.py  pipeline.py  project.py  propose.py  report.py  scoring.py  sources.py  study_inspect.py  study_management.py  sync.py  transform.py  validate.py
cli/src/pegasus_v2f/templates/: gitignore  v2f.yaml
cli/tests/: conftest.py  test_ai_assist.py  test_annotate_pegasus.py  test_cli_pegasus.py  test_config.py  test_cytoband.py  test_db.py  test_db_meta.py  test_evidence.py  test_evidence_config.py  test_evidence_loader.py  test_inspect.py  test_integrate.py  test_pegasus_export.py  test_pegasus_schema.py  test_pipeline.py  test_project.py  test_report.py  test_scoring.py  test_sources.py  test_sources_evidence.py  test_study_config.py  test_study_inspect.py  test_study_management.py  test_transform.py
r-client/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r-client/R/: connect.R  genes.R  loci.R  meta.R  query.R  traits.R  utils.R
schema/: README.md
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+51 files in other folders)
