[project]
name = "pegasus-v2f-api"
version = "0.1.0"
description = "PEGASUS V2F — FastAPI server and React UI"
requires-python = ">=3.11"
dependencies = [
    "pegasus-v2f",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pegasus_v2f_api"]
